name:           parse-email-headers
version:        0.1.0.0
synopsis:       Lax parser for email headers
category:       Network
homepage:       https://github.com/phlummox/parse-email-headers#readme
bug-reports:    https://github.com/phlummox/parse-email-headers/issues
author:         phlummox
maintainer:     phlummox2@gmail.com
license:        BSD2
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/phlummox/parse-email-headers

library
  exposed-modules:
      Network.Mail.ParseHeaders
  hs-source-dirs:
      src
  build-depends:
      ListLike
    , attoparsec >=0.13
    , base >=4.10
    , bytestring >=0.10
    , text >=1.2
    , word8 >=0.1
  default-language: Haskell2010
